Closed
Bug 92210
Opened 24 years ago
Closed 24 years ago
Window steals focus if you switch to another app while "Transferring data from..."
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: bryner, Assigned: bryner)
Details
Attachments
(2 files)
|
1.19 KB,
patch
|
Details | Diff | Splinter Review | |
|
3.78 KB,
patch
|
Details | Diff | Splinter Review |
On a Linux branch build (200107120, which has saari's patch), I can get the
window to steal focus back from another app using the following steps:
1. Type in a URL2. During the time that it says "Transferring data from ..." in
the status bar (the old document is still showing at this point), alt-tab to
another app.
3. When painting is unsuppressed, the browser window steals focus.
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.4
| Assignee | ||
Comment 1•24 years ago
|
||
Ok, so it looks like we aren't getting a deactivate event in the ESM for some
reason...
| Assignee | ||
Comment 2•24 years ago
|
||
Ok, I have a patch and better steps to reproduce this:
1. Create a personal toolbar bookmark to query Bonsai for "all checkins in the
last day".
2. Load www.mozilla.org
3. Click the bonsai toolbar button
4. Wait for the status bar to say "Transferring data from bonsai.mozilla.org".
You may have to move the mouse around a bit while it's connecting to get this
message to show up.
5. Alt-tab to another app
6. Alt-tab back to mozilla
7. Alt-tab back to the other app
Result:
When painting unsuppresses on the new page, the mozilla window steals focus.
| Assignee | ||
Comment 3•24 years ago
|
||
Comment 4•24 years ago
|
||
r=saari
Comment 5•24 years ago
|
||
sr=hyatt
| Assignee | ||
Comment 6•24 years ago
|
||
checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Reopening this bug. I had to back out the patch for this bug because it caused
blocker bugs 95243 (Crash when typing in body of mail compose window)
and 95297 (session history doesn't restore scroll position and form controls).
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 10•24 years ago
|
||
| Assignee | ||
Comment 11•24 years ago
|
||
Ok, I think I have a patch for this bug that does not cause the regressions.
Status: REOPENED → ASSIGNED
| Assignee | ||
Comment 12•24 years ago
|
||
Comment 13•24 years ago
|
||
sr=hyatt
Comment 14•24 years ago
|
||
okay, code looks good, and I'll assume hyatt knows what he's talking about
(bwahahah) r=saari
| Assignee | ||
Comment 15•24 years ago
|
||
checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 16•24 years ago
|
||
verified fixed - buildID : 2001-08-22-08 trunk. - Linux 7.1
Status: RESOLVED → VERIFIED
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•