Bug 92210 - Browser window steals focus if you switch to another window during "Transferring data from..." state.  r=saari, sr=hyatt.