docshell/base/nsDocShell.cpp
@@ -1054,11 +1054,20 @@ nsDocShell::GetPresContext(nsIPresContext ** aPresContext)
     NS_ENSURE_ARG_POINTER(aPresContext);
     *aPresContext = nsnull;
 
-    if (mContentViewer) {
-        nsCOMPtr<nsIDocumentViewer> docv(do_QueryInterface(mContentViewer));
-
-        if (docv) {
-            rv = docv->GetPresContext(*aPresContext);
+    /* We want to get the prescontext for the "most previous"
+       content viewer, because this is the one that will actually
+       be shown onscreen and is hooked up for events. */
+    nsCOMPtr<nsIContentViewer> viewer = mContentViewer;
+    while (viewer) {
+        nsCOMPtr<nsIContentViewer> prevViewer;
+        viewer->GetPreviousViewer(getter_AddRefs(prevViewer));
+        if (prevViewer)
+            viewer = prevViewer;
+        else {
+            nsCOMPtr<nsIDocumentViewer> docv(do_QueryInterface(viewer));
+            if (docv)
+                rv = docv->GetPresContext(*aPresContext);
+            break;
         }
     }
 
